changed develop db to SQLite